stateDiagram-v2
    [*] --> Pending
    
    Pending --> Processing: Worker picks up
    
    Processing --> Sent: Success
    Processing --> Retry: Temporary error
    Processing --> Failed: Max retries exceeded
    
    Retry --> Pending: Retry count < 3
    Retry --> Failed: Retry count >= 3
    
    Sent --> [*]
    Failed --> [*]
    
    note right of Pending
        Priority levels:
        10 - Urgent (practice starting NOW)
        8 - High (10min reminder)
        5 - Normal (24h reminder)
        3 - Low (marketing)
        1 - Background (analytics)
    end note
    
    note right of Retry
        Retry delays:
        1st retry: +30 seconds
        2nd retry: +2 minutes
        3rd retry: +10 minutes
    end note
